[tool.poetry]
name = "modern-bert-mlx"
version = "0.1.0"
description = "ModernBERT Implemented for Apple Silicon"
authors = ["Aditesh Kumar <27091329+aramuk@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlx = "^0.21.1"
pyobjc = "^10.3.2"
rich = "^13.9.4"
pydantic = "^2.10.4"


[tool.poetry.group.experimental.dependencies]
# Install transformers>=4.48.0.dev0 to bring in modernbert implementation for weights.
# transformers = { git = "git+https://github.com/huggingface/transformers.git", rev = "919220d" }
transformers = { path = "./transformers" }
torch = "^2.0.0"
safetensors = "^0.4.5"
mlx-lm = "^0.20.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
