[tool.poetry]
name = "modern-bert-mlx"
version = "0.1.0"
description = "ModernBERT Implemented for Apple Silicon"
authors = ["Aditesh Kumar <27091329+aramuk@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlx = "^0.21.1"
pyobjc = "^10.3.2"
pydantic = "^2.10.4"
transformers = "^4.48.0"


[tool.poetry.group.experimental.dependencies]
matplotlib = "^3.10.0"
mlx-lm = "^0.20.6"
rich = "^13.9.4"
safetensors = "^0.4.5"
torch = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
